namespace mpt_lab_6.Product;

public interface IProduct
{
    double GetPrice();
    string GetDescription();
}